--- a/src/app/components/panel/tablas/elemento-fundamental/elemento-fundamental.component.html
+++ b/src/app/components/panel/tablas/elemento-fundamental/elemento-fundamental.component.html
@@ -86,7 +86,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Agregar Indicador</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Agregar Elemento</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -148,7 +148,7 @@
     <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Editar Indicador</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Editar Elemento</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
