--- a/src/app/components/panel/reports/reports.component.css
+++ b/src/app/components/panel/reports/reports.component.css
@@ -1,5 +1,4 @@
 .contenedor-flotante {
-    padding: 3rem;
     border-radius: 20px;
     background: #fff;
     padding: 1rem 1rem;
@@ -7,3 +6,98 @@
     -webkit-box-shadow: 10px 10px 20px -10px rgba(0,0,0,0.5);
     -moz-box-shadow: 10px 10px 20px -10px rgba(0,0,0,0.5);
 }
+
+.contenedor-titulo h3 {
+    color: #fff;
+    margin: 0;
+}
+.contenedor-titulo {
+    background: #1F295B;
+    width: 300px;
+    border: solid 1px #1F295B;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.btn-custom button{
+    width: 100%;
+    padding: .5rem 3rem;
+    background: #1F295B;
+    color: #fff;
+    border: solid 1px #1F295B;
+}
+
+.input-group-text {
+    width: 110px;
+}
+
+h3 {
+    margin: 0 0 1rem;
+    justify-content: center;
+    display: flex;
+}
+.indicadores-container {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+  }
+  
+  .indicadores-section {
+    margin-bottom: 20px;
+  }
+  
+  .indicadores-list {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .indicador-item {
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #e9e9e9;
+    border-radius: 5px;
+  }
+  .indicador-item p {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .indicador-item i {
+    cursor: pointer; /* Opcional: Cambia el cursor a una mano para indicar que es clickeable */
+  }
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 20px 0;
+  }
+  
+  th, td {
+    border: 1px solid black;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  th {
+    background-color: #1F295B;
+    color: white;
+  }
+  .tablaCuantitativos {
+    display: flex;
+    justify-content: center;
+  }
+  label {
+    display: block; /* Hace que cada etiqueta ocupe su propia línea */
+    margin-bottom: 10px; /* Aumenta el espacio entre las opciones de radio */
+  }
+  
+  input[type="radio"] {
+    margin-right: 10px; /* Añade espacio entre el radio button y su etiqueta */
+  }
+  .boton-centrado {
+    display: flex;
+    justify-content: center;
+    
+  }
+  
