nuevo componente reporte x criterio y mejora vistas

--- a/src/app/components/panel/reports/reports.component.html
+++ b/src/app/components/panel/reports/reports.component.html
@@ -30,7 +30,7 @@
                 </div>
               </div>
               </div>
-              <button (click)="generarReporteIndicadoresCuantitativos()">Generar reportes indicadores cuantitativos</button>
+              <button class="generar-reporte-btn" (click)="generarReporteIndicadoresCuantitativos()">Generar reportes indicadores cuantitativos</button>
               <div *ngIf="mostrarTotalIndicadores" class="tablaCuantitativos">
                 <table border="1" style="width: 50%; text-align: center; margin-top: 20px;">
                
@@ -89,7 +89,7 @@
                 </div>
               </div>
             </div>
-            <button (click)="tablaCualitativos()">Generar reportes indicadores cualitativos</button>
+            <button class="generar-reporte-cualitativos-btn" (click)="tablaCualitativos()">Generar reportes indicadores cualitativos</button>
             <table border="1" *ngIf="reportCualitativos">
               <tr>
                 <th rowspan="2">Total Indicadores</th>
@@ -122,7 +122,7 @@
             </table>
           </div>
         </div>
-        <button (click)="mostrarReporteGeneral()">Reporte general</button>
+        <button class="reporte-general-btn" (click)="mostrarReporteGeneral()">Reporte general</button>
         <div *ngIf="mostrarTablaCriterios">
           <table border="1">
             <tr>
@@ -138,19 +138,23 @@
                 <th>%</th>
             </tr>
             <tr *ngFor="let criterio of criteriosConIndicadores">
-                <td>{{ criterio.Detalle }}</td>
+              <td>
+                <a [routerLink]="['/panel/reporteCriterio']" [queryParams]="{ detalle: criterio.Detalle }">{{ criterio.Detalle }}</a>
+              </td>
                 <td>{{ criterio.indicadoresValidados }}</td>
                 <td>{{ criterio.porcentajeValidados | number:'1.2-2' }}%</td>
                 <td>{{ criterio.pendientes }}</td>
                 <td>{{ criterio.porcentajePendientes | number:'1.2-2' }}%</td>
                 <td>{{ criterio.numIndicadores }}</td>
+                
             </tr>
           </table>
         </div>
         <div class="boton-centrado">
-          <button (click)="generarPDF()">Generar Reporte pdf</button>
+          <button class="generar-pdf-btn" (click)="generarPDF()">Generar Reporte PDF</button>
         </div>
       </div>
   </div>
 </div>
+<router-outlet></router-outlet>
 </div>
