add PeriodoEvaluacion on edit form

--- a/src/app/components/panel/tablas/indicadores/indicadores.component.html
+++ b/src/app/components/panel/tablas/indicadores/indicadores.component.html
@@ -148,7 +148,6 @@
                             <label for="PeriodoEvaluacionAgregar" class="form-label">Periodo de Evaluacion</label>
                             <input type="text" class="form-control" id="PeriodoEvaluacionAgregar" formControlName="periodoEvaluacion" placeholder="Periodo de evaluación del indicador">
                             <span class="text-danger ml-5 mt-2" *ngIf="agregar.get('periodoEvaluacion')?.errors?.['required'] && agregar.get('periodoEvaluacion')?.touched">El periodo de evaluación es <strong>requerido</strong></span>
-                            <span class="text-danger ml-5 mt-2" *ngIf="agregar.get('periodoEvaluacion')?.errors?.['minlength'] && agregar.get('periodoEvaluacion')?.touched">El periodo de evaluación debe tener minimo<strong> 5 caracteres</strong></span>
                             <span class="text-danger ml-5 mt-2" *ngIf="agregar.get('periodoEvaluacion')?.errors?.['maxlength'] && agregar.get('periodoEvaluacion')?.touched">El periodo de evaluación debe tener un máximo de<strong> 300 caracteres</strong></span>
                         </div>
                     </form>
@@ -201,7 +200,7 @@
                         <!--Estandard-->
                         <div class="mb-3">
                             <label for="DetalleAgregar" class="form-label">Estandar</label>
-                            <textarea formControlName="estandar" class="form-control" placeholder="Escriba el estandar del modelo" id="" cols="30" rows="10"></textarea>
+                            <textarea formControlName="estandar" class="form-control" placeholder="Escriba el estandar del modelo" id="" cols="30" rows="1"></textarea>
                             <span class="text-danger ml-5 mt-2" *ngIf="editar.get('estandar')?.errors?.['required'] && editar.get('estandar')?.touched">El estandar es <strong>requerido</strong></span>
                             <span class="text-danger ml-5 mt-2" *ngIf="editar.get('estandar')?.errors?.['minlength'] && editar.get('estandar')?.touched">El estandar debe tener minimo <strong>5 caracteres</strong></span>
                         </div>
@@ -209,7 +208,6 @@
                         <div class="mb-3">
                             <label for="" class="form-label">Orden</label>
                             <input type="text" class="form-control" formControlName="orden" placeholder="1, 2, 3, ...">
-                            <span class="text-danger ml-5 mt-2" *ngIf="editar.get('orden')?.errors?.['required'] && editar.get('orden')?.touched">El orden del criterio es <strong>requerido</strong></span>
                             <span class="text-danger ml-5 mt-2" *ngIf="editar.get('orden')?.errors?.['pattern'] && editar.get('orden')?.touched">El orden solo puede contener <strong>números enteros</strong></span>
                         </div> 
                         <!--Tipo de Evaluacion-->
@@ -236,6 +234,12 @@
                                 </div>
                             </ng-container>
                             <span class="text-danger ml-5 mt-2" *ngIf="editar.get('valoracion')?.errors?.['required'] && editar.get('valoracion')?.touched">El tipo de evaluacion es <strong>requerido</strong></span>
+                        </div>
+                        <!--Periodo de Evaluacion-->
+                        <div class="mb-3">
+                            <label for="PeriodoEvaluacionAgregar" class="form-label">Periodo de Evaluacion</label>
+                            <input type="text" class="form-control" id="PeriodoEvaluacionEdit" formControlName="periodoEvaluacion" placeholder="Periodo de evaluación del indicador">
+                            <span class="text-danger ml-5 mt-2" *ngIf="agregar.get('periodoEvaluacion')?.errors?.['maxlength'] && agregar.get('periodoEvaluacion')?.touched">El periodo de evaluación debe tener un máximo de<strong> 300 caracteres</strong></span>
                         </div>
                     </form>
                 </div>
